<resources>
    <string name="app_name">asistencia mecanica final</string>
    <string name="ingrese_su_n_mero">Ingrese su número</string>
    <string name="ingrese_su_nombre">Ingrese su nombre</string>
    <string name="enviar">Enviar</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="datos_recibidos">Datos recibidos</string>
    <string name="servicio_de_gr_a">Servicio de Grúa</string>
    <string name="servicio_mec_nico">Servicio Mecánico</string>
    <string name="servicio_de_combustible">Servicio de Combustible</string>
    <string name="marca_del_carro">Marca del carro</string>
    <string name="modelo">Modelo</string>
    <string name="placa_del_carro">Placa del carro</string>
    <string name="color_del_carro">Color del carro</string>
    <string name="enviar2">Enviar2</string>
    <string name="tomar_foto_del_carro">Tomar foto del carro</string>
    <string name="ubicaci_n_del_carro">Ubicación del carro</string>
    <string name="regresar_al_men_de_opciones">Regresar al menú de opciones</string>
    <string name="tipo_de_combustible">Tipo de Combustible</string>
    <string name="regular">regular</string>
    <string name="premium">Premium</string>
    <string name="tipo_de_di_sel">Tipo de Diésel</string>
    <string name="diesel_a">Diesel A</string>
    <string name="biodiesel">Biodiesel</string>
    <string name="total_de_galones">Total de Galones</string>
    <string name="ingresa_el_total_de_galones">Ingresa el total de galones</string>
    <string name="solicitar_servicio_de_combustible">Solicitar Servicio de Combustible</string>
    <string name="regresar">Regresar</string>
    <string name="solicitar_servicios">SOLICITAR SERVICIOS</string>
    <string name="salir">SALIR</string>
    <string name="regresar_al_menu">REGRESAR AL MENU</string>

</resources>